--- a/sklearn_machine_learning.ipynb
+++ b/sklearn_machine_learning.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,8 @@
     "from sklearn import svm\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import metrics\n",
-    "from sklearn.model_selection import KFold\n"
+    "from sklearn.model_selection import KFold\n",
+    "from numpy import save\n"
    ]
   },
   {
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -469,7 +470,7 @@
     {
      "data": {
       "text/plain": [
-       "0.73"
+       "0.75"
       ]
      },
      "execution_count": 12,
@@ -490,8 +491,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[60,  7],\n",
-       "       [20, 13]], dtype=int64)"
+       "array([[64,  4],\n",
+       "       [21, 11]], dtype=int64)"
       ]
      },
      "execution_count": 13,
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +590,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save numpy data to a file\n",
+    "save(\"x_data.npy\", x)\n",
+    "save(\"y_data.npy\", y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,6 +623,13 @@
     "pickle_in = open(\"ranForest.pickle\", \"rb\")\n",
     "ranForest = pickle.load(pickle_in)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
